OP-149 Set default duration (30min) and date check on visits. (#877)
* Set default duration (30min) and date check on visits.

Also clean and improve code

* Fix for multiple visit save

* Fix as per comments review

* Fix therapy changes

and also refactor constants

* Fix spacing

* Fix edit therapy (not insert)

Fix also duration calculation

* Fix window position after re-pack

* Add remove visit button in worksheet

* Enable visits management for admitted patients

* Fixes by comments review

* Avoid automatic saving and have changes all buffered before save

* Fix visit automatic save in worksheet

* Fix layout

* Fix deletion on second day list

* reload data from DB upon new visits

* Fix MessageDialog calls

* Organize imports

* Fix bundle

* Small workaround to avoid cursor jumps among new items in the same day

TODO:
- better arrays management (to highlight also unsaved)
- improve events handling (to avoid selection flickering)

* Add validation for visits buffered to save

* Avoid Worksheet operativity when there are visit changes pending

* Fixes by comments review

* Sync Swing quantity controllers

* Avoid Worksheet operativity when there are therapies changes pending

* Avoid therapies in the past and improved bundles

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1403,14 +1403,15 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = N
 angal.therapy.addvisit.btn                                                                             = Nueva Visita
 angal.therapy.addvisit.btn.key                                                                         = U
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = No se puede definir una terapia para una fecha pasada.
 angal.therapy.availablem                                                                               = DISPONIBLE
-angal.therapy.changenotifysettingsfor                                                                  = Cambiar la organización de notificación para
+angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiar la organización de notificación para {0}
 angal.therapy.checkavailability.btn                                                                    = Verificar Disponibilidad
 angal.therapy.checkavailability.btn.key                                                                = V
 angal.therapy.daydays                                                                                  = día/s
-angal.therapy.deletealltherapiesfor                                                                    = Eliminar todas las terapias para
-angal.therapy.deleteallvisitsfor                                                                       = Eliminar todas las visitas para
-angal.therapy.doyouwanttosetanumernowfor                                                               = Asignar un número telefónico para
+angal.therapy.deletealltherapiesfor.fmt                                                                = Eliminar todas las terapias para {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Eliminar todas las visitas para {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Asignar un número telefónico para {0}
 angal.therapy.edittherapy.btn                                                                          = Modificar Terapia
 angal.therapy.edittherapy.btn.key                                                                      = M
 angal.therapy.edittherapyentryform.title                                                               = Modificar Formulario de Entrada de Terapia
@@ -1436,7 +1437,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Visitas del paciente grabadas
 angal.therapy.period                                                                                   = Período
 angal.therapy.pharmaceutical                                                                           = Producto
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Digitar una cantidad mayor a cero
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Digitar una cantidad mayor a cero.
+angal.therapy.pleasesavechangesfirst.msg                                                               = Primero, guarde los cambios.
 angal.therapy.removetherapy.btn                                                                        = Remover Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remover Visita
@@ -1446,12 +1448,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inicio
 angal.therapy.startsdashend                                                                            = Inicio _ Fin
-angal.therapy.telephonenumberfor                                                                       = Número telefónico para
+angal.therapy.telephonenumberfor.fmt                                                                   = Número telefónico para {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = El Plan de terapias no se ha guardado.
 angal.therapy.therapiesplansaved                                                                       = Plan de terapias guadado
 angal.therapy.therapy                                                                                  = Terapia
 angal.therapy.therapy.title                                                                            = Terapia
-angal.therapy.therapyfor                                                                               = Terapia para
+angal.therapy.therapyfor.fmt                                                                           = Terapia para {0}
 angal.therapy.therapynotavailable.title                                                                = Terapia no disponible
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = No existe un número telefónico asociado a este paciente
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = La Terapia no a sido controlada, continuar?
@@ -1505,6 +1507,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Previo
 angal.visit.arrowprevious.btn.key                                                                      = V
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = No se puede programar una visita para una fecha pasada.
 angal.visit.changepatient                                                                              = Cambiar Paciente
 angal.visit.durationinminutes                                                                          = Duración (minutos)
 angal.visit.findpatient.btn                                                                            = Asociar Paciente
@@ -1521,6 +1524,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Imprimir las Visitas de este Día (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Remover Visita
+angal.visit.removevisit.msg                                                                            = Eliminar la visita?
 angal.visit.selectaward                                                                                = Seleccionar un reparto
 angal.visit.service                                                                                    = Servicio
 angal.visit.today.btn                                                                                  = Hoy
