--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1042,7 +1042,7 @@ angal.newbill.youcannotdeletepastpayments.msg                                   
 angal.opd.agefrommustbelowerthanageto.msg                                                              = 'Age from' must be lower than 'Age to'.
 angal.opd.alldiseases.txt                                                                              = All Diseases
 angal.opd.attendancedate.txt                                                                           = Admittance Date
-angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for next visit.
+angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
 angal.opd.deletefollowingopd.fmt.msg                                                                   = Delete the following opd?\n\nRegistration Date={0}\nDisease={1}\nAge={2}, Sex={3}\nVisit Date={4}
 angal.opd.diagnosis.txt                                                                                = Diagnosis
@@ -1408,14 +1408,15 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = A
 angal.therapy.addvisit.btn                                                                             = Add Visit
 angal.therapy.addvisit.btn.key                                                                         = D
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = A therapy cannot be defined for a date that is past.
 angal.therapy.availablem                                                                               = AVAILABLE
-angal.therapy.changenotifysettingsfor                                                                  = Change notify settings
+angal.therapy.changenotifysettingsfor.fmt                                                              = Change notify settings {0}
 angal.therapy.checkavailability.btn                                                                    = Check Availability
 angal.therapy.checkavailability.btn.key                                                                = H
 angal.therapy.daydays                                                                                  = day/s
-angal.therapy.deletealltherapiesfor                                                                    = Delete all therapies for
-angal.therapy.deleteallvisitsfor                                                                       = Delete all visits for
-angal.therapy.doyouwanttosetanumernowfor                                                               = Do you want to set a telephone number for
+angal.therapy.deletealltherapiesfor.fmt                                                                = Delete all therapies for {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Delete all visits for {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Do you want to set a telephone number for {0}
 angal.therapy.edittherapy.btn                                                                          = Edit Therapy
 angal.therapy.edittherapy.btn.key                                                                      = E
 angal.therapy.edittherapyentryform.title                                                               = Edit Therapy Entry Form
@@ -1441,7 +1442,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Patient visits saved.
 angal.therapy.period                                                                                   = Period
 angal.therapy.pharmaceutical                                                                           = Pharmaceutical
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Please insert a quantity greater than 0
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Please insert a quantity greater than 0.
+angal.therapy.pleasesavechangesfirst.msg                                                               = Please save changes first.
 angal.therapy.removetherapy.btn                                                                        = Remove Therapy
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remove Visit
@@ -1451,12 +1453,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Start
 angal.therapy.startsdashend                                                                            = Starts - Ends
-angal.therapy.telephonenumberfor                                                                       = Telephone number for
+angal.therapy.telephonenumberfor.fmt                                                                   = Telephone number for {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = Therapies plan has not been saved.
 angal.therapy.therapiesplansaved                                                                       = Therapies plan saved
 angal.therapy.therapy                                                                                  = Therapy
 angal.therapy.therapy.title                                                                            = Therapy
-angal.therapy.therapyfor                                                                               = Therapy for
+angal.therapy.therapyfor.fmt                                                                           = Therapy for {0}
 angal.therapy.therapynotavailable.title                                                                = Therapy Not Available
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = There's no telephone number associated with this Patient
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = The Therapy has not been checked, continue?
@@ -1510,6 +1512,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prev.
 angal.visit.arrowprevious.btn.key                                                                      = P
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = A visit cannot be scheduled for a date that is past.
 angal.visit.changepatient                                                                              = Change Patient
 angal.visit.durationinminutes                                                                          = Duration (Min)
 angal.visit.findpatient.btn                                                                            = Find Patient
@@ -1526,6 +1529,8 @@ angal.visit.printthisdaysvisits1.btn                                            
 angal.visit.printthisdaysvisits1.btn.key                                                               = 1
 angal.visit.printthisdaysvisits2.btn                                                                   = Print this day's visits (2)
 angal.visit.printthisdaysvisits2.btn.key                                                               = 2
+angal.visit.removevisit.btn                                                                            = Remove Visit
+angal.visit.removevisit.msg                                                                            = Remove the visit?
 angal.visit.selectaward                                                                                = Select a Ward
 angal.visit.service                                                                                    = Service
 angal.visit.today.btn                                                                                  = Today
