--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1045,6 +1045,7 @@ angal.opd.attendancedate.txt                                                    
 angal.opd.cannotsetadateinthepastfornextvisit.msg                                                      = You can not set a date in the past for the next visit.
 angal.opd.datefrommustbebefordateto.msg                                                                = 'Date from' must be earlier than 'Date to'.
 angal.opd.deletefollowingopd.fmt.msg                                                                   = Delete the following opd?\n\nRegistration Date={0}\nDisease={1}\nAge={2}, Sex={3}\nVisit Date={4}
+angal.opd.deletefollowingopdextended.fmt.msg                                                           = Delete the following opd?\n\nPatient={0}\nRegistration Date={1}\nDisease={2}\nAge={3}, Sex={4}\nVisit Date={5}
 angal.opd.diagnosis.txt                                                                                = Diagnosis
 angal.opd.diagnosisnfulllist2.txt                                                                      = Diagnosis n.2 (full list)
 angal.opd.diagnosisnfulllist3.txt                                                                      = Diagnosis n.3 (full list)
