run always telemetry daemon + confirmation dialog with summary
- run always telemetry daemon - (except if settings.properties disables
it)

- added dialog with the content of the tlemetry message that will be
sent to https://www.informaticisenzafrontiere.org/

- corrected what Alessandro asked to change

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1449,7 +1449,14 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inicio
 angal.therapy.startsdashend                                                                            = Inicio _ Fin
-angal.telemetry.title                                                                             	   = Telemetria
+angal.telemetry.title                                                                             	   = Ayúdanos a mejorar Open Hospital
+angal.telemetry.about																				   = Recopile datos de uso anónimos y envíelos a informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital es el primero de un conjunto de productos de software que Informatici Senza Frontiere ha desarrollado para apoyar la gestión de la información y las actividades de los hospitales y centros de salud de la manera más sencilla posible, proporcionando herramientas para las operaciones administrativas del hospital. (como registrar pacientes, administrar análisis de laboratorio y existencias farmacéuticas) y producir estadísticas e informes detallados.
+angal.telemetry.body																				   = Elija lo que desea compartir (y lo que no) con nuestra organización:
+angal.telemetry.button.label.confirm																   = Confirmar
+angal.telemetry.button.label.ask.later																   = Pregúntame Luego
+angal.telemetry.button.label.ask.never																   = Desactivar y no volver a preguntar
+angal.telemetry.confirmation.dialog.message															   = ¿Estás seguro de que quieres enviar esta información?
 angal.therapy.telephonenumberfor.fmt                                                                   = NÃºmero telefÃ³nico para {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = El Plan de terapias no se ha guardado.
 angal.therapy.therapiesplansaved                                                                       = Plan de terapias guadado
