--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -950,7 +950,14 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = Gestionnaire des SMS
 angal.menu.statistics                                                                                  = Statistiques
 angal.menu.supplier                                                                                    = Fournisseur
-angal.telemetry.title                                                                             	   = Télemetria
+angal.telemetry.title                                                                             	   = Aidez-nous à améliorer Open Hospital
+angal.telemetry.about																				   = Collecter des données d'utilisation anonymes et les envoyer à informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital est le premier d'un ensemble de produits logiciels qu'Informatici Senza Frontiere a développé pour soutenir la gestion de l'information et les activités des hôpitaux et des centres de santé de la manière la plus simple possible, en fournissant des outils pour les opérations administratives de l'hôpital (comme enregistrer les patients, gérer les analyses de laboratoire et les stocks pharmaceutiques) et produire des statistiques et des rapports détaillés.
+angal.telemetry.body																				   = Veuillez choisir ce que vous souhaitez partager (et ce qui ne l'est pas) avec notre organisation :
+angal.telemetry.button.label.confirm																   = Confirmer
+angal.telemetry.button.label.ask.later																   = Demande moi plus tard
+angal.telemetry.button.label.ask.never																   = Désactiver et ne plus jamais demander
+angal.telemetry.confirmation.dialog.message															   = Êtes-vous sûr de vouloir envoyer ces informations ?
 angal.menu.types                                                                                       = Typologies
 angal.menu.users                                                                                       = Usagers
 angal.menu.usersusers                                                                                  = Usagers
