--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -952,7 +952,14 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = Gestore SMS
 angal.menu.statistics                                                                                  = Statistiche
 angal.menu.supplier                                                                                    = Fornitore
-angal.telemetry.title                                                                             	   = Télemetria
+angal.telemetry.title                                                                             	   = Aiutaci a migliorare Open Hospital
+angal.telemetry.about																				   = Raccogli dati di utilizzo anonimi e inviali a informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital è il primo di una serie di prodotti software che Informatici Senza Frontiere ha sviluppato per supportare nel modo più semplice possibile la gestione delle informazioni e le attività di ospedali e centri sanitari, fornendo strumenti per le operazioni amministrative ospedaliere (come registrare i pazienti, gestire analisi di laboratorio e scorte farmaceutiche) e produrre statistiche e report dettagliati.
+angal.telemetry.body																				   = Scegli cosa vuoi condividere (e cosa no) con la nostra organizzazione:
+angal.telemetry.button.label.confirm																   = Confermare
+angal.telemetry.button.label.ask.later																   = Chiedimelo più tardi
+angal.telemetry.button.label.ask.never																   = Disabilitare e non chiedere mai più
+angal.telemetry.confirmation.dialog.message															   = Se sicuro di volere inviare le seguenti informazioni?
 angal.menu.types                                                                                       = Tipologie
 angal.menu.users                                                                                       = Utenti
 angal.menu.usersusers                                                                                  = Utenti
