--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -952,7 +952,14 @@ angal.menu.printing                                                             
 angal.menu.smsmanager                                                                                  = SMS Manager
 angal.menu.statistics                                                                                  = Statistics
 angal.menu.supplier                                                                                    = Supplier
-angal.telemetry.title                                                                             	   = Telemetry
+angal.telemetry.title                                                                             	   = Help us improve Open Hospital
+angal.telemetry.about																				   = Collect anonymous usage data and send them to informaticisenzafrontiere.org
+angal.telemetry.info																				   = Open Hospital is the first of a set of software products that Informatici Senza Frontiere has developed to support the information management and the activities of hospitals and health centers in the simplest manner possible, by providing tools for the hospital administrative operations (like registering patients, manage laboratory analysis and pharmaceutical stocks) and to produce detailed statistics and reports.
+angal.telemetry.body																				   = Please choose what you want to share (and what not) with our organization:
+angal.telemetry.confirmation.dialog.message															   = Are you sure that you want to send these informations?
+angal.telemetry.button.label.confirm																   = Confirm
+angal.telemetry.button.label.ask.later																   = Ask me later 
+angal.telemetry.button.label.ask.never																   = Disable and never ask again 
 angal.menu.types                                                                                       = Types
 angal.menu.users                                                                                       = Users
 angal.menu.usersusers                                                                                  = Users
