OP-659 fix New/Edit/Delete buttons

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -29,7 +29,7 @@ angal.admission.data.btn                                                        
 angal.admission.data.btn.key                                                                           = D
 angal.admission.date.border                                                                            = Date
 angal.admission.deletepatient                                                                          = Delete patient
-angal.admission.deletepatient.btn                                                                      = Delete Patient
+angal.admission.deletepatient.btn                                                                      = Delete
 angal.admission.deletepatient.btn.key                                                                  = T
 angal.admission.deletepatient.fmt.msg                                                                  = Delete patient: {0}?
 angal.admission.deleteselectedadmission.msg                                                            = Delete the selected admission?
@@ -48,7 +48,7 @@ angal.admission.dischargedatemustbeafteradmissiondate.msg                       
 angal.admission.dischargetype.border                                                                   = Discharge Type
 angal.admission.editadmissionrecord.title                                                              = Edit Admission Record
 angal.admission.editpatient                                                                            = Edit Patient
-angal.admission.editpatient.btn                                                                        = Edit Patient
+angal.admission.editpatient.btn                                                                        = Edit
 angal.admission.editpatient.btn.key                                                                    = E
 angal.admission.examination                                                                            = Examination
 angal.admission.examination.btn                                                                        = Examination
