OP-659 fix New/Edit/Delete buttons

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -26,11 +26,9 @@ angal.admission.controln2date.border                                            
 angal.admission.count.fmt.txt                                                                          = Count: {0}
 angal.admission.data                                                                                   = Data
 angal.admission.data.btn                                                                               = Data
-angal.admission.data.btn.key                                                                           = D
+angal.admission.data.btn.key                                                                           = T
 angal.admission.date.border                                                                            = Date
 angal.admission.deletepatient                                                                          = Delete patient
-angal.admission.deletepatient.btn                                                                      = Delete
-angal.admission.deletepatient.btn.key                                                                  = T
 angal.admission.deletepatient.fmt.msg                                                                  = Delete patient: {0}?
 angal.admission.deleteselectedadmission.msg                                                            = Delete the selected admission?
 angal.admission.deleteselectedopd.msg                                                                  = Delete the selected OPD?
@@ -48,8 +46,6 @@ angal.admission.dischargedatemustbeafteradmissiondate.msg                       
 angal.admission.dischargetype.border                                                                   = Discharge Type
 angal.admission.editadmissionrecord.title                                                              = Edit Admission Record
 angal.admission.editpatient                                                                            = Edit Patient
-angal.admission.editpatient.btn                                                                        = Edit
-angal.admission.editpatient.btn.key                                                                    = E
 angal.admission.examination                                                                            = Examination
 angal.admission.examination.btn                                                                        = Examination
 angal.admission.examination.btn.key                                                                    = X
@@ -157,7 +153,7 @@ angal.admission.theoperationdatenewerthan.fmt.msg                               
 angal.admission.thepatientwasnotyetbornatselecteddate.msg                                              = The patient was not yet born at selected date.
 angal.admission.therapy                                                                                = Therapy
 angal.admission.therapy.btn                                                                            = Therapy
-angal.admission.therapy.btn.key                                                                        = T
+angal.admission.therapy.btn.key                                                                        = H
 angal.admission.thereismorethanonependingbillforthispatientcontinue.msg                                = There is more than one pending bill for this patient, continue?
 angal.admission.theselectedadmissionhasnoconcernwithmalnutrition.msg                                   = The selected admission has no concern with malnutrition.
 angal.admission.thispatienthasapendingbill.msg                                                         = This Patient has a pending bill.
