Commit suggestion from code review (FR)

--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -886,7 +886,7 @@ angal.menu.btn.opdchart                                                         
 angal.menu.btn.operation                                                                               = Interventions
 angal.menu.btn.operationtype                                                                           = Typologie Intervention
 angal.menu.btn.otherprices                                                                             = Autres Prix
-angal.menu.btn.patientvaccine                                                                          = Vaccines
+angal.menu.btn.patientvaccine                                                                          = Vaccins
 angal.menu.btn.patreport                                                                               = Visualiser le Rapport
 angal.menu.btn.pharmacy                                                                                = Pharmacie
 angal.menu.btn.pretreatmenttype                                                                        = Typologie Traitements Grossesse
