Apply suggestions from code review (FR, PT, IT, ES, SQ, SW)

--- a/rpt/BillsReportPending_it.properties
+++ b/rpt/BillsReportPending_it.properties
@@ -16,9 +16,9 @@ Paid = Pagato
 
 Patient = PAZIENTE
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
+Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
 
-With.Pending.Invoices = (with pending invoices)
+With.Pending.Invoices = (con fatture aperte)
 
 Receivables = CREDITI
 
