--- a/rpt/BillsReport_fr.properties
+++ b/rpt/BillsReport_fr.properties
@@ -4,7 +4,7 @@ Accrued.In.Period = (augmenté dans la période)
 
 Amount = Montant
 
-Balance = Bilan
+Balance = Solde
 
 Bill.Id = ID Facture
 
@@ -16,9 +16,9 @@ Paid = Payé
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
+Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées/Facturé et Recevables
 
-All.Invoices = (all invoices)
+All.Invoices = (toutes les factures)
 
 Receivables = RECEVABLES
 
