--- a/rpt/ProductLedgerWard_pt.properties
+++ b/rpt/ProductLedgerWard_pt.properties
@@ -35,7 +35,7 @@ Prod.Code = Cód. Prod.
 
 Reference = Referência
 
-StarNote1 = * The "Value" is the progressive amount obtained using the "Balance" and the "Avg.Cost" calculated with the "Weighted average cost per movement" method
+StarNote1 = * TO "Valor" é o montante progressivo obtido utilizando o "Saldo" e o "Custo Médio" calculado com o método "Custo médio ponderado por movimento"
 
 Store = Depósito
 
