--- a/rpt/ProductLedger_sq.properties
+++ b/rpt/ProductLedger_sq.properties
@@ -3,7 +3,7 @@
 
 Balance = Balanca
 
-ClosingBalance = Stock Quantity at the end of period
+ClosingBalance = Sasia e aksioneve në fund të periudhës
 
 Curr. = Valuta
 
