--- a/rpt/patient_clinical_sheet_ver3_fr.properties
+++ b/rpt/patient_clinical_sheet_ver3_fr.properties
@@ -2,7 +2,7 @@
 
 PatientClinicalSheet = FICHE CLINIQUE PATIENT
 
-ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = This report shows the patient history between two dates, more recent information as first.
+ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = Ce rapport montre l'historique du patient entre deux dates, les informations les plus récentes comme la première.
 
 Version = version
 
