--- a/rpt/patient_clinical_sheet_ver3_it.properties
+++ b/rpt/patient_clinical_sheet_ver3_it.properties
@@ -2,7 +2,7 @@
 
 PatientClinicalSheet = SCHEDA CLINICA DEL PAZIENTE
 
-ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = This report shows the patient history between two dates, more recent information as first.
+ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = Questo rapporto mostra la storia del paziente tra due date, le informazioni più recenti per prima.
 
 Version = versione
 
