--- a/rpt/BillsReportPending_fr.properties
+++ b/rpt/BillsReportPending_fr.properties
@@ -4,7 +4,7 @@ Accrued.In.Period = (augmenté dans la période)
 
 Amount = Montant
 
-Balance = balance
+Balance = Balance
 
 Bill.Id = ID Facture
 
@@ -16,9 +16,9 @@ Paid = Payé
 
 Patient = Patient
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
+Periodical.Incomes.Billed.And.Receivables.Report = Rapport periodique Entrées / Facturé et Recevables
 
-With.Pending.Invoices = (with pending invoices)
+With.Pending.Invoices = (avec payements en cours)
 
 Receivables = RECEVABLES
 
