--- a/rpt/BillsReport_it.properties
+++ b/rpt/BillsReport_it.properties
@@ -16,9 +16,9 @@ Paid = Pagato
 
 Patient = PAZIENTE
 
-Periodical.Incomes.Billed.And.Receivables.Report = Periodical Incomes / Billed and Receivables Report
+Periodical.Incomes.Billed.And.Receivables.Report = Report periodico Incasso / Fatturato e Crediti
 
-All.Invoices = (all invoices)
+All.Invoices = (tutte le fatture)
 
 Receivables = CREDITI
 
