--- a/rpt/patient_clinical_sheet_ver3_es.properties
+++ b/rpt/patient_clinical_sheet_ver3_es.properties
@@ -2,7 +2,7 @@
 
 PatientClinicalSheet = FICHA CLÍNICA DEL PACIENTE
 
-ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = This report shows the patient history between two dates, more recent information as first.
+ThisReportShowsPatientHistoryBetweenTwoDatesMoreRecentInformationAsFirst = Este informe muestra el historial del paciente entre dos fechas, la información más reciente como primera.
 
 Version = versión
 
